package org.example.parkinggui.symulator;

public class Parking {
}
